--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -3,7 +3,8 @@
     grid-template-columns: auto 450px 460px;
     grid-template-rows: 100px  250px auto;
     height: 100vh;
-    width: 98vw;
+    max-height: 100vh;
+    width: 90vw;
     margin: 0 auto;
 
     grid-template-areas:
@@ -39,4 +40,6 @@
 
 #right {
     grid-area: rightBlock;
+    height: 70vh;
+    max-height: 70vh;
 }
