modified index and gathering pages

--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -23,7 +23,13 @@
 #left-pic {
     /* grid-area: picBlock; */
     /* overflow: scroll; */
+    
    
+}
+
+
+#left-block{
+    grid-area: leftBlock;
 }
 
 #left-map {
