--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -1,16 +1,21 @@
+body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color:ghostwhite;
+}
+
 .wrap {
     display: grid;
-    grid-template-columns: 20% 55% auto;
-    grid-template-rows: 100px  auto auto 100px;
+    grid-template-columns: 10% auto 10%;
+    grid-template-rows: 90px  auto 90px;
     height: 100vh;
     max-height: 100vh;
-    width: 90vw;
-    margin: 0 auto;
+    
+    
 
     grid-template-areas:
     "header header header"
     "leftBlock infoBlock rightBlock"
-    "leftBlock infoBlock rightBlock"
+    
     "leftBlock comment rightBlock";
 
 
@@ -20,16 +25,32 @@
     grid-area: header;
 }
 
-#left-pic {
-    /* grid-area: picBlock; */
-    /* overflow: scroll; */
-    
+
+
+#center{
+
+    grid-area: infoBlock;
+  
+    display: flex;
+    justify-content: center;
+    height: 85vh;
+}
+
+#gatheringDetail {
+    /* height: 100%; */
+    overflow: auto;
+
+    display: inline-block;
+    width: 45%;
+    margin: 20px;
+    margin-top: 2px;
+    height:90%;
    
 }
 
-
-#left-block{
-    grid-area: leftBlock;
+#gatheringDetail::-webkit-scrollbar {
+    width: 1px;
+    /* background-color: black; */
 }
 
 #left-map {
@@ -38,18 +59,19 @@
    height:30vh;
 }
 
-#left-info {
-    grid-area: infoBlock;
-    /* overflow: scroll; */
-    
-   
-}
-
-
 #right {
-    grid-area: rightBlock;
+    
     height: 70vh;
     max-height: 70vh;
+    padding-bottom: 0.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    height: 80vh;
+    max-height: 80vh;
+    display: inline-block;
+    width: 35%;
+    margin: 20px;
+    margin-top: 2px;
+  
 }
 
 
