--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,9 +1,9 @@
 .wrap {
     display: grid;
-    grid-template-columns: auto 350px;
+    grid-template-columns: auto 450px;
     grid-template-rows: 100px auto;
     height: 100vh;
-    width: 98vw;
+    width: 90vw;
     margin: 0 auto;
 
     grid-template-areas:
@@ -45,4 +45,22 @@
 
 #right {
     grid-area: rightBlock;
+    overflow: scroll;
+}
+
+#right::-webkit-scrollbar {
+    width: 5px;
+    background-color: whitesmoke;
+}
+
+#right::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #66A8FF;
+}
+
+#right::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 10px;
+    background-color: whitesmoke;
 }
