--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     justify-content: center;
     height: 85vh;
+    
 }
 
 #gatheringDetail {
@@ -45,6 +46,7 @@ body {
     margin: 20px;
     margin-top: 2px;
     height:90%;
+    
    
 }
 
@@ -57,6 +59,10 @@ body {
     /* grid-area: mapBlock; */
     /* overflow: scroll; */
    height:30vh;
+}
+
+.list-group-item {
+    background-color: ghostwhite;
 }
 
 #right {
@@ -77,4 +83,55 @@ body {
 
 #commentArea {
     grid-area: header;
+}
+
+
+
+
+.container-status {
+    /* width: 40%;
+    position: relative;
+    top: 50%;
+    left: 50%;*/
+    padding: 10px 20px 20px 20px; 
+    margin: 0 auto 1% auto;
+    box-sizing: border-box;
+    /* transform: translate(-50%, -50%); */
+    /* background-color: rgb(235, 227, 227); */
+    /* box-shadow: 0 20px 50px rgba(43, 151, 184, 0.5); */
+}
+
+.skillbox h3 {
+    font-size: 15px;
+    /* text-transform: uppercase; */
+    color: rgb(0, 0, 0);
+}
+
+/* .skillbox .percentage {
+    float: right;
+    position: relative;
+    top: -40px;
+    font-weight: bold;
+    color: #fff;
+} */
+
+.cover {
+    width: 100%;
+    height: 10px;
+    background-color: #262626;
+    border: 1px solid #3facf5;
+    border-radius: 2px;
+}
+
+.cover .progressbar {
+    height: 6px;
+    background-color: #3facf5;
+    margin-left: 2px;
+    margin-top: 2px;
+    border-radius: 2px;
+}
+
+.html .progressbar {
+    width: 33%;
+    animation: animatehtml 1s linear;
 }
