--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,4 +1,6 @@
-
+/* .card {
+    height: 40vh;
+} */
 
 .wrap {
     display: grid;
@@ -96,3 +98,29 @@
     box-shadow: 5px 5px 12px grey;
 }
 
+
+
+
+#offcanvasWithBackdrop {
+    overflow: scroll;
+    height: 100vh;
+}
+
+
+
+#offcanvasWithBackdrop::-webkit-scrollbar {
+    width: 5px;
+    background-color: whitesmoke;
+}
+
+#offcanvasWithBackdrop::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #66A8FF;
+}
+
+#offcanvasWithBackdrop::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 10px;
+    background-color: whitesmoke;
+}
