--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -1,3 +1,9 @@
+
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
 body {
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color:ghostwhite;
@@ -200,3 +206,51 @@ border-radius: 100%;
     width: 33%;
     animation: animatehtml 1s linear;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+.centered {
+    position: absolute;
+    left: 34%;
+    top: 92%;
+    transform: translate(-50%, -50%);
+  }
+  .mouse-scroll {
+    width: 36px;
+    height: 60px;
+    border: 1px solid rgba(127, 127, 129, 0.556);
+    border-radius: 30px;
+  }
+  
+  .mouse-scroll:before {
+    content: "";
+    position: absolute;
+    left: 14px;
+    top: 10px;
+    margin: auto;
+    width: 8px;
+    height: 8px;
+    background: rgba(77, 115, 151, 0.8);
+    border-radius: 8px;
+    animation: scroll-ani 1.5s linear infinite;
+  }
+  
+  @keyframes scroll-ani {
+    0% {
+      top: 10px;
+      opacity: 0.8;
+    }
+    100% {
+      top: 25px;
+      opacity: .1;
+    }
+  }
