--- a/public/styles/header_footer.css
+++ b/public/styles/header_footer.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Microsoft JhengHei",sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 
