--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,3 +1,9 @@
+
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
 .wrap {
     display: grid;
     grid-template-columns: auto 450px;
