--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,45 +4,61 @@
 
 
 *{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:  'Circular', '-apple-system', 'BlinkMacSystemFont', 'Roboto', 'Helvetica Neue', 'sans-serif', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.wrap {
-    display: grid;
-    grid-template-columns: 5% 90% 1%;
-    grid-template-rows: 100px 50px auto;
-    height: 95vh;
-    width: 95vw;
-    margin: 0 auto;
 
-    grid-template-areas:
-    "filling header messages"
-    "filling search messages"
-    "filling centerBlock messages";
+.wrap {
+    /* display: grid;
+    grid-template-columns: 10% auto 10%;
+    grid-template-rows: 70px 10% auto; */
+    height: 99vh;
+    width: 99vw;
+    margin: 0 auto;
+display: flex;
+flex-direction: column;
+    /* grid-template-areas:
+    "filling header filling-right"
+    "search search search"
+    "filling-left-bottom centerBlock fill-bottom"; */
 
 
   }
 
 #header {
-    grid-area: header;
+    /* grid-area: header; */
     display: flex;
+    background-color: white;
+    width: 100vw;
+    height: 65px;
 }
 
-#search-box{
-    grid-area: search
+#search-box-placeholder{
+    /* grid-area: search; */
+    display: flex;
+    align-content: center; 
+    flex-direction: row; 
+    justify-content: space-around;
+    /* height: 80px; */
+    width: 100vw;
+    padding-top: 55px;
 }
 
 #center{
-    grid-area: centerBlock;
+    /* grid-area: centerBlock; */
+    display: flex;
+    flex-direction: row;
+    max-width: 100vw;
+    justify-content: center;
 }
 
 #left {
    
-    overflow: scroll;
-    
+    overflow-y: scroll;
+    max-width: 730px;
     margin-top: 8px;
     height: 90vh;
-    width: 55%;
+    width: 46vw;
     display: inline-block;
 }
 
@@ -69,11 +85,12 @@
 
 #map {
     height: 80vh;
-    width: 40%;
-    height: 80vh;
-    margin: 5px;
+    /* width: 43%; */
+    height: 90vh;
+    margin: 8px;
+    /* display: inline-block; */
+    max-width: 40vw;
     display: inline-block;
-    
 }
 
 #gathering {
@@ -128,4 +145,133 @@
     -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
     border-radius: 10px;
     background-color: whitesmoke;
+}
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,300,100');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.2/css/weather-icons.min.css');
+
+
+.searchbar,
+.searchbutton {
+	height: 45px;
+	margin: 1em 0 1em;
+	padding: 0;
+	font: 400 1rem 'Roboto';
+	letter-spacing: 0.025em;
+	text-transform: uppercase;
+	color: black;
+	border: none;
+}
+.searchbar {
+	float: left;
+	width: 80%;
+	border-bottom: solid thin rgb(110, 209, 231);
+	color: #141414;
+	color: rgba(0, 255, 255, 0.7);
+}
+
+.searchbar::-webkit-input-placeholder {color: rgb(14, 13, 13); opacity: 0.35;}
+.searchbar::-moz-placeholder {color: rgb(15, 15, 15); opacity: 0.35;}
+.searchbar:-ms-input-placeholder {color: rgb(19, 18, 18); opacity: 0.35;}
+.searchbar:-moz-placeholder {color: rgb(10, 10, 10); opacity: 0.35;}
+
+.searchbutton:focus,
+.searchbar:focus {outline: none; color: white;}
+.searchbar:focus::-webkit-input-placeholder {color: white; opacity: 0.7;}
+.searchbar:focus::-moz-placeholder {color: white; opacity: 0.7;}
+.searchbar:focus:-ms-input-placeholder {color: white; opacity: 0.7;}
+.searchbar:focus:-moz-placeholder {color: white; opacity: 0.7;}
+
+.searchbutton {
+	/* float: right; */
+	width: 80px;
+    background-color: #3fdce7;
+    color: white;
+    border-radius: 100px;
+}
+
+
+
+
+
+
+
+
+
+/* .text-box {
+    margin-left: 44vw;
+   margin-top: 42vh;
+} */
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 5px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: relative;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(255, 2550, 255, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(255, 2550, 255, 0.2);
+}
+
+.btn-white {
+    /* background-color: rgb(62,220,232); */
+    background-color: #FF385C;
+    color: #FFF;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 5s ease-out;
+    animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+.material-icons {
+    font-size: 36px;
 }
