--- a/public/styles/header_footer.css
+++ b/public/styles/header_footer.css
@@ -1,5 +1,5 @@
-* {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+*{
+    font-family:  'Circular', '-apple-system', 'BlinkMacSystemFont', 'Roboto', 'Helvetica Neue', 'sans-serif', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
@@ -9,26 +9,7 @@
 } */
 
 
-.main-header {
-	height: 80px;
-    width: 100vw;
-    display: flex;
-    align-items: flex-start;
-    /* align-items:stretch; */
-    /* justify-content:space-between; */
-    position: fixed;
-    top: 0;
-	left: -5px;
-    /* border-bottom: 40px solid #2b2d2f; */
-    z-index: 99;
-    background-color: white;
-	/* border-bottom: solid;
-	border-color: #66A8FF; */
-	margin-bottom: 5px;
-	/* opacity:0.1; */
 
-	box-shadow: 1px 1px 8px grey;
-}
 
 
 .main-header > .logo {
@@ -190,4 +171,17 @@
 
 .tagline {
 	font-size: 1.4em;
+}
+
+
+.material-icons {
+    font-size: 36px;
+}
+
+#header {
+    /* grid-area: header; */
+    display: flex;
+    background-color: white;
+    width: 100vw;
+    height: 65px;
 }
