modified profile.html and gathering.html

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -25,7 +25,7 @@
 
 #left {
     grid-area: leftBlock;
-    overflow: scroll;
+    overflow-y: scroll;
     padding-left: 30px;
    
 }
@@ -51,7 +51,7 @@
 
 #right {
     grid-area: rightBlock;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 #right::-webkit-scrollbar {
