--- a/public/styles/gathering.css
+++ b/public/styles/gathering.css
@@ -53,12 +53,12 @@ margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 85vh;
+    height: 95vh;
     justify-content: center;
     /* margin: 0 auto; */
-    width: 66%;
+    width: 55%;
     align-items: center;
-    padding-top: 80px;
+    padding-top: 70px;
     
 }
 
@@ -67,18 +67,33 @@ margin: 0 auto;
     overflow: auto;
 
     display: inline-block;
-    width: 90%;
+    width: 98%;
     margin: 20px;
     margin-top: 2px;
-    height:90%;
+    height:98%;
     
-   
 }
+
 
 #gatheringDetail::-webkit-scrollbar {
     width: 1px;
-    /* background-color: black; */
+    /* background-color: whitesmoke; */
 }
+
+/* #gatheringDetail::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #66A8FF;
+}
+
+#gatheringDetail::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 10px;
+    background-color: whitesmoke;
+} */
+
+
+
 
 
 
@@ -91,19 +106,23 @@ margin: 0 auto;
     /* grid-area: mapBlock; */
     /* overflow: scroll; */
    height:30vh;
-   width: 80%;
+   width: 100%;
+}
+
+.card-header {
+    background-color: rgba(63, 220, 231,0.1);
 }
 
 .card-body {
-    width: 80%;
+    width: 82%;
 }
 
 .rating-container {
-    width: 80%;
+    width: 82%;
 }
 
 .list-group {
-    width: 80%;
+    width: 82%;
 }
 
 .list-group-item {
@@ -132,24 +151,36 @@ margin: 0 auto;
     grid-area: header;
 }
 
-#commentList {
-    overflow-y: scroll;
-   
-}
+
 #commentCard{
     overflow-y: scroll;
-    background-color: ghostwhite;
+    background-color: white;
 }
 
-#commentList::-webkit-scrollbar {
+
+
+#commentCard::-webkit-scrollbar {
     width: 1px;
+    background-color: whitesmoke;
     /* background-color: black; */
+}
+
+#commentCard::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #66A8FF;
+}
+
+#commentCard::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 10px;
+    background-color: whitesmoke;
 }
 
 #participants {
     overflow: scroll;
     height: 43%;
-    padding: 1rem;
+    padding: 2rem;
     width: 100%;
 }
 
@@ -303,9 +334,10 @@ border-radius: 100%;
   #groupChatRoom {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 75vh;
     width: 90%;
-    max-height: 100%;
+    max-height: 75vh;
+    border-radius: 35px;
     /* border: thin;
     border-color: turquoise; */
 
@@ -352,9 +384,15 @@ border-radius: 100%;
     border: none;
     padding: 0 1rem;
     margin: 0.25rem;
-    border-radius: 3px;
+    border-radius: 33px;
     outline: none;
     color: #fff;
+    
+}
+
+#submit-msg {
+    background-color: rgba(255, 56, 92,0.8);
+    border: none;
 }
 
 #messages {
@@ -366,12 +404,31 @@ border-radius: 100%;
 }
 
 #messages>li {
+  
     padding: 0.5rem 1rem;
+    /* border-radius: 50%; */
+    border:solid;
+    width: fit-content;
+    border-width:0;
+    /* background-color: rgba(63, 220, 231,0.4); */
+    background-color: rgba(63, 220, 231,0.3);
 }
 
-#messages>li:nth-child(odd) {
-    background: #efefef;
+
+.message-myself {
+    margin: 8px 8px 8px auto;
+    box-shadow: 3px 3px 1.5px rgba(0, 0, 0, 0.5);
 }
+
+.message-others {
+    margin: 8px 8px 8px 8px;
+    box-shadow: 3px 3px 1.5px rgba(0, 0, 0, 0.5);
+}
+
+
+/* #messages>li:nth-child(odd) {
+    background: #efefef;
+} */
 
 
 
@@ -382,8 +439,8 @@ border-radius: 100%;
 }
 
 
-btn:link,
-.btn:visited {
+.btn-send:link,
+.btn-send:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 5px 40px;
@@ -393,12 +450,12 @@ btn:link,
     position: relative;
 }
 
-.btn:hover {
+.btn-send:hover {
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(255, 255, 255, 0.2);
 }
 
-.btn:active {
+.btn-send:active {
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
 }
@@ -409,7 +466,7 @@ btn:link,
     color: #FFF;
 }
 
-.btn::after {
+.btn-send::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -427,7 +484,7 @@ btn:link,
     color: white;
 }
 
-.btn:hover::after {
+.btn-send:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
 }
@@ -447,4 +504,15 @@ btn:link,
         opacity: 1;
         transform: translateY(0px);
     }
+}
+
+
+
+#quitEvent {
+    opacity: 0.3;
+}
+
+
+.card-hide {
+    display: none;
 }
