--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -160,7 +160,7 @@ flex-direction: column;
 	padding: 0;
 	font: 400 1rem 'Roboto';
 	letter-spacing: 0.025em;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	color: black;
 	border: none;
 }
@@ -169,7 +169,7 @@ flex-direction: column;
 	width: 80%;
 	border-bottom: solid thin rgb(110, 209, 231);
 	color: #141414;
-	color: rgba(0, 255, 255, 0.7);
+	color: black;
 }
 
 .searchbar::-webkit-input-placeholder {color: rgb(14, 13, 13); opacity: 0.35;}
@@ -178,7 +178,7 @@ flex-direction: column;
 .searchbar:-moz-placeholder {color: rgb(10, 10, 10); opacity: 0.35;}
 
 .searchbutton:focus,
-.searchbar:focus {outline: none; color: white;}
+.searchbar:focus {outline: none; color: rgb(31, 28, 28);}
 .searchbar:focus::-webkit-input-placeholder {color: white; opacity: 0.7;}
 .searchbar:focus::-moz-placeholder {color: white; opacity: 0.7;}
 .searchbar:focus:-ms-input-placeholder {color: white; opacity: 0.7;}
