--- a/public/styles/sign.css
+++ b/public/styles/sign.css
@@ -1,32 +1,47 @@
 .wrap {
-    display: grid;
+    /* display: grid;
     grid-template-columns: auto 65%;
-    grid-template-rows: 80px  auto;
+    grid-template-rows: 80px  auto; */
     height: 100vh;
-    width: 98vw;
+    width: 95vw;
     margin: 0 auto;
 
-    grid-template-areas:
+    /* grid-template-areas:
     "header header"
-    "leftBlock rightBlock";
+    "leftBlock rightBlock"; */
+
+
+
+    display: flex;
+    justify-content: space-around;
 
 
   }
 
 #header {
-    grid-area: header;
+    /* grid-area: header; */
+}
+
+
+#content-wrap {
+    display: flex;
+    flex-direction: row;
+    padding-top: 200px;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: space-around;
 }
 
 #left {
-    grid-area: leftBlock;
+    /* grid-area: leftBlock; */
     /* overflow: scroll; */
     display:flex;
     align-items:center;
     justify-content:center;
     flex-direction: column;
-    margin-left: 20%;
-    margin-bottom: 15%;
-   
+    /* margin-left: 25%; */
+    /* margin-bottom: 15%; */
+    width: 50%;
 }
 
 
@@ -37,20 +52,26 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    
+    width: 50%;
 }
 
 
 
 #card {
-    width: 50%;
-    height: 75%;
+    /* width: 50%;
+    height: 50%; */
     border-radius:10px;
     background-color: white;
     text-align: center;
     margin: auto;
     padding: auto;
+    height: 35%;
+    width: 50%;
     /* display:flex; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
@@ -71,4 +92,9 @@
     border-width: 1px;
     width:100%
 
+}
+
+#main-img {
+    height:300px;
+    margin-bottom: 10px;
 }
