--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -5,28 +5,30 @@
 
 
 .wrap {
-    display: grid;
+    /* display: grid;
     grid-template-columns: auto 450px;
-    grid-template-rows: 100px auto;
+    grid-template-rows: 100px auto; */
     height: 100vh;
-    width: 90vw;
+    width: 85vw;
     margin: 0 auto;
-
-    grid-template-areas:
+display: flex;
+    /* grid-template-areas:
     "header header"
-    "leftBlock rightBlock";
-
+    "leftBlock rightBlock"; */
+    padding-top: 90px;
+justify-content: space-around;
 
   }
 
 #header {
-    grid-area: header;
+    /* grid-area: header; */
 }
 
 #left {
-    grid-area: leftBlock;
-    overflow-y: scroll;
-    padding-left: 30px;
+    /* grid-area: leftBlock; */
+    /* overflow-y: scroll; */
+    /* padding-left: 30px; */
+    width: 35%;
    
 }
 
@@ -48,25 +50,38 @@
     background-color: whitesmoke;
 }
 
+#profileList {
+    width: 90%;
+}
+
 
 #right {
-    grid-area: rightBlock;
+    /* grid-area: rightBlock; */
+    overflow-y: scroll;
+    width: 55%;
+}
+
+#accordionPanelsStayOpenExample {
+    width: 96%;
+    height:98%;
     overflow-y: scroll;
 }
 
-#right::-webkit-scrollbar {
+#accordionPanelsStayOpenExample::-webkit-scrollbar {
     width: 5px;
     background-color: whitesmoke;
 }
 
-#right::-webkit-scrollbar-thumb {
+#accordionPanelsStayOpenExample::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
     background-color: #66A8FF;
 }
 
-#right::-webkit-scrollbar-track {
+#accordionPanelsStayOpenExample::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
     border-radius: 10px;
     background-color: whitesmoke;
 }
+
+
