--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -279,3 +279,18 @@ flex-direction: column;
 .material-icons {
     font-size: 36px;
 }
+
+
+
+.my-style-selector select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-color: #6ec3f5;
+    border-width: 2px;
+    border-radius: 10em;
+    color: #1390e8;
+    margin-right: 10px;
+    outline: none;
+    padding: .3em 1.25em;
+  }
