--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -54,6 +54,11 @@ justify-content: space-around;
     width: 90%;
 }
 
+.gathering-pic {
+    width: 90%;
+    height: 90%;
+}
+
 
 #right {
     /* grid-area: rightBlock; */
