added first test

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -62,7 +62,7 @@ justify-content: space-around;
 
 #right {
     /* grid-area: rightBlock; */
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     width: 55%;
 }
 
