--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -13,15 +13,14 @@
     grid-template-columns: 10% auto 10%;
     grid-template-rows: 70px 10% auto; */
     height: 99vh;
-    width: 99vw;
+    /* width: 99vw; */
     margin: 0 auto;
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
     /* grid-template-areas:
     "filling header filling-right"
     "search search search"
     "filling-left-bottom centerBlock fill-bottom"; */
-
 
   }
 
